--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ requires-python = ">=3.10"
 dependencies = [
   "paramiko",
   "python-dotenv",
-  "click"
+  "click",
+  "telnetlib3"
 ]
 
 [project.scripts]
