--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -5,8 +5,8 @@ on:
     branches: [ main ]
 
 permissions:
-  contents: write   # tag + release notes
-  id-token: write   # (future) OIDC to PyPI if you enable uploads
+  contents: write
+  id-token: write
 
 jobs:
   release:
@@ -14,12 +14,31 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0   # IMPORTANT: semantic-release needs full history & tags
+          fetch-depth: 0
+
       - uses: actions/setup-python@v5
         with:
           python-version: "3.13"
+
       - run: pip install python-semantic-release build
+
       - name: Run semantic-release (version, tag, GH release)
+        id: semrel
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: semantic-release publish
+        run: |
+          semantic-release publish --changelog changelog.md
+
+      # ✨ extra step: commit updated CHANGELOG.md back to main
+      - name: Commit updated CHANGELOG.md
+        if: ${{ success() && hashFiles('CHANGELOG.md') != '' }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add CHANGELOG.md
+          if git diff --cached --quiet; then
+            echo "No changelog changes."
+          else
+            git commit -m "chore(changelog): update for ${GITHUB_REF##*/}"
+            git push
+          fi
